--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,9 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
     "prettier": "^2.4.1",
+    "pug": "^3.0.2",
+    "pug-loader": "^2.4.0",
+    "pug-plain-loader": "^1.1.0",
     "vue-template-compiler": "^2.6.14"
   }
 }
