--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "prettier": "prettier --write './src/**/*.{vue, js}'"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "vue": "^2.6.14",
     "vuex": "^3.6.2"
   },
